Mon Dec  3 13:59:06 2001  Ossama Othman  <ossama@uci.edu>

	* ace/README:

	  The ACE_HAS_IP6 macro has been superceded by the ACE_HAS_IPV6
	  macro.  Also added description of the
	  ACE_USES_IPV4_IPV6_MIGRATION macro based on Steve's description
	  below.

Mon Dec  3 15:50:42 2001  Steve Huston  <shuston@riverace.com>

        * IPv6 changes done by John Aughey and myself. To enable IPv6
          support for a build, put this in your config.h file:
              #define ACE_HAS_IPV6
          If your build with IPv6 enabled must also run on systems where
          the IPv6 support in the kernel is not actually turned on (for
          example, Redhat Linux 7 by default), also add this to your
          config.h file:
               #define ACE_USES_IPV4_IPV6_MIGRATION

        * ace/ACE.cpp (format_hexdump): Add \n to last part of a dump line.

        * ace/INET_Addr.(h i cpp): If IPv6 is enabled, the inet_addr_
          member is now a union of sockaddr_in and sockaddr_in6. Which
          one is legit is noted in ACE_Addr::type as well as the family
          member of either of the union members.  The host name lookup
          functions can look up ipv6 as well as ipv4 names, and the
          caller can force one or the other by using the address_family
          argument to set().

        * ace/OS.(h i): Removed ACE_OS::gethostbyname2; replaced it with
          the more correctly-named and more flexible ACE_OS::getipnodebyname.
          Also added ACE_OS::getipnodebyaddr. These are the IPv6-capable
          functions analogous to gethostbyname and gethostbyaddr.

        * ace/SOCK.cpp (get_remote_addr, get_local_addr): Set up the
          ACE_Addr's type properly to account for ipv4/6 possibilities.

        * ace/SOCK_Acceptor.(h cpp): Allow accepting on ipv4 and ipv6 sockets.

        * ace/SOCK_CODgram.h:
        * ace/SOCK_Connector.(cpp h ):
        * ace/SOCK_Dgram.(cpp h ): Change default protocol family from