@@ -42,8 +42,8 @@ RSC=rc.exe
 # PROP Output_Dir ""
 # PROP Intermediate_Dir ".\LIB\Release"
 # PROP Target_Dir ""
-MTL=midl.exe
 LINK32=link.exe -lib
+MTL=midl.exe
 # ADD BASE CPP /nologo /MD /W3 /GX /O1 /I "../" /D ACE_HAS_DLL=0 /D "ACE_NO_INLINE" /D "NDEBUG" /D "WIN32" /D "_WINDOWS" /FD /c
 # SUBTRACT BASE CPP /YX
 # ADD CPP /nologo /MT /W3 /GX /O1 /I "../" /I "../PACE" /D ACE_OS_HAS_DLL=0 /D ACE_HAS_DLL=0 /D "ACE_NO_INLINE" /D "NDEBUG" /D "WIN32" /D "_WINDOWS" /FD /c
@@ -69,8 +69,8 @@ LIB32=link.exe -lib
 # PROP Output_Dir ""
 # PROP Intermediate_Dir ".\LIB\Debug"
 # PROP Target_Dir ""
-MTL=midl.exe
 LINK32=link.exe -lib
+MTL=midl.exe
 # ADD BASE CPP /nologo /MDd /W3 /Gm /GX /Zi /Od /Gy /I "../" /D "_DEBUG" /D "WIN32" /D "_WINDOWS" /D ACE_HAS_DLL=0 /FD /c
 # SUBTRACT BASE CPP /YX
 # ADD CPP /nologo /MTd /W3 /GX /Z7 /Od /Gy /I "../" /I "../PACE" /D "_DEBUG" /D "WIN32" /D "_WINDOWS" /D ACE_HAS_DLL=0 /D ACE_OS_HAS_DLL=0 /FD /c
@@ -96,8 +96,8 @@ LIB32=link.exe -lib
 # PROP Output_Dir ""
 # PROP Intermediate_Dir ".\LIB\Release"
 # PROP Target_Dir ""
-MTL=midl.exe
 LINK32=link.exe -lib
+MTL=midl.exe
 # ADD BASE CPP /nologo /G5 /MT /W3 /GX /O1 /I "../" /D "NDEBUG" /D "WIN32" /D "_WINDOWS" /D ACE_HAS_DLL=0 /D "ACE_NO_INLINE" /YX /FD /c
 # ADD CPP /nologo /MD /W3 /GX /Zi /O1 /I "../" /I "../PACE" /D "_WINDOWS" /D "NDEBUG" /D "ACE_AS_STATIC_LIBS" /D "WIN32" /FD /c
 # SUBTRACT CPP /YX
@@ -122,8 +122,8 @@ LIB32=link.exe -lib
 # PROP Output_Dir ""
 # PROP Intermediate_Dir ".\LIB\Debug"
 # PROP Target_Dir ""
-MTL=midl.exe
 LINK32=link.exe -lib
+MTL=midl.exe
 # ADD BASE CPP /nologo /G5 /MTd /W3 /Gm /GX /Zi /Od /Gy /I "../" /D "_DEBUG" /D "WIN32" /D "_WINDOWS" /D ACE_HAS_DLL=0 /D "ACE_NO_INLINE" /YX /FD /c
 # ADD CPP /nologo /MDd /W3 /Gm /GX /Zi /Od /Gy /I "../" /I "../PACE" /D "_WINDOWS" /D "_DEBUG" /D "ACE_AS_STATIC_LIBS" /D "WIN32" /FD /c
 # SUBTRACT CPP /YX
@@ -441,6 +441,10 @@ SOURCE=.\Log_Msg_NT_Event_Log.cpp
 # End Source File
 # Begin Source File
 
+SOURCE=.\Log_Msg_UNIX_Syslog.cpp
+# End Source File
+# Begin Source File
+
 SOURCE=.\Log_Record.cpp
 # End Source File
 # Begin Source File
@@ -618,6 +622,14 @@ SOURCE=.\PI_Malloc.cpp
 # Begin Source File
 
 SOURCE=.\Pipe.cpp
+# End Source File
+# Begin Source File
+
+SOURCE=.\POSIX_Asynch_IO.cpp
+# End Source File
+# Begin Source File
+
+SOURCE=.\POSIX_Proactor.cpp
 # End Source File
 # Begin Source File
 
@@ -1421,6 +1433,10 @@ SOURCE=.\Log_Msg_NT_Event_Log.h
 # End Source File
 # Begin Source File
 
+SOURCE=.\Log_Msg_UNIX_Syslog.h
+# End Source File
+# Begin Source File
+
 SOURCE=.\Log_Priority.h
 # End Source File
 # Begin Source File
@@ -1642,6 +1658,14 @@ SOURCE=.\PI_Malloc.h
 # Begin Source File
 
 SOURCE=.\Pipe.h
+# End Source File
+# Begin Source File
+
+SOURCE=.\POSIX_Asynch_IO.h
+# End Source File
+# Begin Source File
+
+SOURCE=.\POSIX_Proactor.h
 # End Source File
 # Begin Source File
 
